som-imx8m-plus: dts: uart1: Disable dma
Signed-off-by: Valentin Raevsky <valentin@compulab.co.il>

--- a/arch/arm64/boot/dts/compulab/som-imx8m-plus.dts
+++ b/arch/arm64/boot/dts/compulab/som-imx8m-plus.dts
@@ -720,6 +720,8 @@
 };
 
 &uart1 { /* BT */
+	/delete-property/dma-names;
+	/delete-property/dmas;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart1>;
 	assigned-clocks = <&clk IMX8MP_CLK_UART1>;
