--- a/arch/arm64/boot/dts/compulab/som-imx8m-plus.dts
+++ b/arch/arm64/boot/dts/compulab/som-imx8m-plus.dts
@@ -686,6 +686,8 @@
 };
 
 &uart1 { /* BT */
+	/delete-property/ dmas;
+	/delete-property/ dma-names;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart1>;
 	assigned-clocks = <&clk IMX8MP_CLK_UART1>;
