--- a/arch/arm64/boot/dts/compulab/som-imx8m-plus_mipi-csi1.dtsi
+++ b/arch/arm64/boot/dts/compulab/som-imx8m-plus_mipi-csi1.dtsi
@@ -7,7 +7,7 @@
 	#size-cells = <0>;
 	status = "okay";
 
-	ar1335_af_mipi1: ar1335_af_mipi1@42 {
+	sensor_mipi1: mipi1@42 {
 		compatible = "econ,ar1335_af", "ar1335_af";
 		reg = <0x42>;
 		pinctrl-names = "default";
@@ -48,12 +48,4 @@
 			remote-endpoint = <&ar1335_af_mipi1_ep>;
 		};
 	};
-};
-
-&cameradev {
-	status = "okay";
-};
-
-&isi_0 {
-	status = "okay";
 };
