--- a/arch/arm64/boot/dts/compulab/som-imx8m-plus_mipi-csi2.dts
+++ b/arch/arm64/boot/dts/compulab/som-imx8m-plus_mipi-csi2.dts
@@ -12,3 +12,19 @@
 	model = "CompuLab SOM-iMX8M-Plus with mipi csi2 enabled";
 	compatible = "compulab,som-imx8m-plus", "fsl,imx8mp";
 };
+
+&cameradev {
+	status = "okay";
+};
+
+&isi_1 {
+	status = "okay";
+
+	cap_device {
+		status = "okay";
+	};
+
+	m2m_device {
+		status = "okay";
+	};
+};
