som-imx8m-plus: dts: Add ar1335-mcu set 2-lane mode
Signed-off-by: Valentin Raevsky <valentin@compulab.co.il>

--- a/arch/arm64/boot/dts/compulab/som-imx8m-plus_mipi-csi1-ar1335-mcu.dts
+++ b/arch/arm64/boot/dts/compulab/som-imx8m-plus_mipi-csi1-ar1335-mcu.dts
@@ -18,6 +18,14 @@
 	pwdn-gpios = <&pca9555 8 GPIO_ACTIVE_LOW>;
 };
 
+&mipi1_ep {
+	data-lanes = <1 2>;
+};
+
+&mipi1_sensor_ep {
+	data-lanes = <2>;
+};
+
 &cameradev {
 	status = "okay";
 };
