--- a/arch/arm64/boot/dts/compulab/som-imx8m-plus_mipi-csi2-ar1335-mcu.dts
+++ b/arch/arm64/boot/dts/compulab/som-imx8m-plus_mipi-csi2-ar1335-mcu.dts
@@ -18,6 +18,14 @@
 	pwdn-gpios = <&pca9555 12 GPIO_ACTIVE_LOW>;
 };
 
+&mipi2_ep {
+	data-lanes = <1 2>;
+};
+
+&mipi2_sensor_ep {
+	data-lanes = <2>;
+};
+
 &cameradev {
 	status = "okay";
 };
